*  view 中需要使用 helper.Constant 来读取 class

--- a/core/app/views/Activitis/_process.html
+++ b/core/app/views/Activitis/_process.html
@@ -1,7 +1,7 @@
 <!-- 非销售账号, IT -->
 <table class="table table-bordered table-striped account_list">
   <tr>
-    <img src="${System.getenv(Constant.ROOT_URL)}@{Activitis.processimage(pdId,piId)}">
+    <img src="${System.getenv(helper.Constant.ROOT_URL)}@{Activitis.processimage(pdId,piId)}">
   </tr>
   <div class="row-fluid">
     <table class="table table-bordered table-condensed">
