--- a/core/app/views/Orders/_invoice_return.html
+++ b/core/app/views/Orders/_invoice_return.html
@@ -111,11 +111,11 @@
       #{if  (ord.market==models.market.M.AMAZON_ES || ord.market==models.market.M.AMAZON_UK ||ord.market==models
       .market.M.AMAZON_FR) || (ord.market==models
       .market.M.AMAZON_IT && invoice?.europevat==models.market.OrderInvoice.VAT.EUROPE)}
-        <img src="${System.getenv(Constant.ROOT_URL)}/images/common/EDEER-logo.jpg"
+        <img src="${System.getenv(helper.Constant.ROOT_URL)}/images/common/EDEER-logo.jpg"
              style="height:100%">
       #{/if}
       #{if  (ord.market==models.market.M.AMAZON_DE) ||  (ord.market==models.market.M.AMAZON_IT && (invoice==null || invoice.europevat!=models.market.OrderInvoice.VAT.EUROPE))}
-        <img src="${System.getenv(Constant.ROOT_URL)}/images/common/TUGGLE-logo.jpg"
+        <img src="${System.getenv(helper.Constant.ROOT_URL)}/images/common/TUGGLE-logo.jpg"
              style="height:100%">
       #{/if}
       </div>
