--- a/core/app/views/Shipments/invoice.html
+++ b/core/app/views/Shipments/invoice.html
@@ -59,7 +59,7 @@
   <tr>
     <td colspan="5" class="td1">
       <div class="div1">
-        <img src="${System.getenv(Constant.ROOT_URL)}/images/common/${models.OperatorConfig.getVal("companyphoto")}"
+        <img src="${System.getenv(helper.Constant.ROOT_URL)}/images/common/${models.OperatorConfig.getVal("companyphoto")}"
              style="height:100%">
       </div>
     </td>
@@ -138,7 +138,7 @@
         <p>${models.OperatorConfig.getVal("companyname")}</p>
 
         <p>SIGNATURE</p>
-        <img src="${System.getenv(Constant.ROOT_URL)}/images/common/${models.OperatorConfig.getVal("signature")}">
+        <img src="${System.getenv(helper.Constant.ROOT_URL)}/images/common/${models.OperatorConfig.getVal("signature")}">
       </div>
     </td>
   </tr>
