*  手动触发 selectize 化供应商的下拉框

--- a/core/app/views/DeliverPlans/index.html
+++ b/core/app/views/DeliverPlans/index.html
@@ -25,8 +25,8 @@
     </div>
 
 
-    <select name="p.cooperId" class="inline">
-      <option value="0">供应商</option>
+    <select name="p.cooperId" class="inline selectize">
+      <option value="">供应商</option>
         #{list items:suppliers, as:'sp'}
           <option ${sp.id == p.cooperId ? 'selected' : ''} value="${sp.id}">${sp.name}</option>
         #{/list}
