*  手动触发 selectize 化供应商的下拉框

--- a/core/app/views/DeliverPlans/index.html
+++ b/core/app/views/DeliverPlans/index.html
@@ -25,7 +25,7 @@
     </div>
 
 
-    <select name="p.cooperId" class="inline selectize">
+    <select name="p.cooperId" class="inline">
       <option value="">供应商</option>
         #{list items:suppliers, as:'sp'}
           <option ${sp.id == p.cooperId ? 'selected' : ''} value="${sp.id}">${sp.name}</option>
