*  取消入库记录与质检任务的强关联,采取保存 ID 的方式来关联.

--- a/core/app/views/InboundRecords/index.html
+++ b/core/app/views/InboundRecords/index.html
@@ -78,8 +78,8 @@
           <td>${r.state.label()}</td>
           <td>${r.origin.label()}</td>
           <td>
-              #{if r.checkTask != null}
-              @{CheckTasks.show(r.checkTask)}
+              #{if r.taskId != null}
+              @{CheckTasks.show(r.taskId)}
             #{/if}
           </td>
           <td>
