--- a/core/app/views/Shipments/_shipitem.html
+++ b/core/app/views/Shipments/_shipitem.html
@@ -31,13 +31,13 @@
     <th>供应商</th>
     <th>总重量(kg)</th>
     <th>抵达?</th>
-    <th>是否合格</th>
     <th>是否发货</th>
     <th>质检信息</th>
   #{if useCheckbox}
     <th>运往仓库</th>
   #{/if}
     <th>采购计划</th>
+    <th>是否出库</th>
     <th>运营创建人</th>
     <th>采购创建人</th>
     <th>丢失量/赔偿金额</th>
@@ -86,30 +86,30 @@
     ${itm.qty - itm.unit.returnPurchaseSample() - itm.unit.fetchCheckTaskQcSample()}
       (${itm.unit.attrs.planQty} | ${itm.unit.attrs.qty})
     </td>
-    #{if itmRecord}
-      <td style="#{if itm.recivedQty != itm.qty || itm.changeFromZero()}background:#F2DEDE#{/if}"
-          name='recivedQty' placement='right' rel='popover'>
-      ${itm.recivedQty}
-      </td>
-    #{/if}
-    #{else }
-      <td style="${itm.recivedQty != itm.qty ? 'background:#F2DEDE' : ''}">
-      ${itm.recivedQty}
-      </td>
-    #{/else}
+      #{if itmRecord}
+        <td style="#{if itm.recivedQty != itm.qty || itm.changeFromZero()}background:#F2DEDE#{/if}"
+            name='recivedQty' placement='right' rel='popover'>
+        ${itm.recivedQty}
+        </td>
+      #{/if}
+      #{else }
+        <td style="${itm.recivedQty != itm.qty ? 'background:#F2DEDE' : ''}">
+        ${itm.recivedQty}
+        </td>
+      #{/else}
 
-    #{if itmRecord}
-      <td style="#{if itm.adjustQty != itm.qty || itm.changeFromZero()}background:#F2DEDE#{/if}"
-          name='adjustQty' placement='right' rel='popover' content='#{records_ul records: itm.recivedLogs()/}'>
-      ${itm.adjustQty}<i class="icon-wrench"></i>
-      </td>
-    #{/if}
-    #{else }
-      <td style="${itm.adjustQty != itm.qty ? 'background:#F2DEDE' : ''}" name="adjustQty"
-          content='#{records_ul records: itm.recivedLogs()/}'>
-      ${itm.adjustQty}<i class="icon-wrench"></i>
-      </td>
-    #{/else}
+      #{if itmRecord}
+        <td style="#{if itm.adjustQty != itm.qty || itm.changeFromZero()}background:#F2DEDE#{/if}"
+            name='adjustQty' placement='right' rel='popover' content='#{records_ul records: itm.recivedLogs()/}'>
+        ${itm.adjustQty}<i class="icon-wrench"></i>
+        </td>
+      #{/if}
+      #{else }
+        <td style="${itm.adjustQty != itm.qty ? 'background:#F2DEDE' : ''}" name="adjustQty"
+            content='#{records_ul records: itm.recivedLogs()/}'>
+        ${itm.adjustQty}<i class="icon-wrench"></i>
+        </td>
+      #{/else}
 
     <td>
       <a href="@{Deliveryments.show(itm.unit.deliveryment?.id)}#${itm.unit.id}">
@@ -124,7 +124,6 @@
     <td>${itm.unit.cooperator?.name}</td>
     <td>${itm.totalWeight()}</td>
     <td>#{yesOrNo f:itm.unit.isPlaced /}</td>
-    <td>${itm.unit.result()}</td>
     <td>${itm.unit.isship()}</td>
     <td>
         #{if itm.unit.fetchCheckTaskLink() != null}
@@ -139,6 +138,9 @@
       <a href="@{Deliveryments.show(itm.unit.deliveryment?.id)}#${itm.unit.id}">
       ${itm.unit.id}
       </a>
+    </td>
+    <td placement='top' rel='popover' content="${itm.unit.outboundMsg()}">
+    ${itm.unit?.isOut?.label()}
     </td>
     <td>${itm.unit.handler.username}</td>
     <td>${itm.unit.deliveryment?.handler?.username}</td>
