*  批量创建出库功能

--- a/core/app/views/OutboundRecords/index.html
+++ b/core/app/views/OutboundRecords/index.html
@@ -114,7 +114,7 @@
           <td>${attrs.get('fba')}</td>
           <td>${attrs.get('whouseName')}</td>
           <td>${attrs.get('shipType')}</td>
-          <td>#{time_tooltip time: attrs.get('planBeginDate')/}</td>
+          <td>${attrs.get('planBeginDate')}</td>
           <td>${r.planQty}</td>
           <td>
             <input type="text" name="qty" value="${r.qty}" style="width:45px;">
