--- a/core/app/views/_js_header.html
+++ b/core/app/views/_js_header.html
@@ -5,7 +5,7 @@
 #{script_cdn name: 'noty/layouts/top.js'/}
 #{script_cdn name: 'noty/layouts/topCenter.js'/}
 #{script_cdn name: 'rails.js'/}
-#{script_cdn name: 'jquery.animate-colors-min.js'/}
+#{script_cdn name: 'jquery.color.js'/}
 #{script_cdn name: 'bootstrap.min.js'/}
 #{script_cdn name: 'bootstrapSwitch.js'/}
 #{script_cdn name: 'jquery.loadmask.min.js'/}
