--- a/core/app/views/OutboundRecords/index.html
+++ b/core/app/views/OutboundRecords/index.html
@@ -1,6 +1,7 @@
 #{extends 'main_full.html'/}
 #{set title:'出库记录(' + records.size() + ')'/}
 #{set 'moreScripts'}
+    #{script_cdn name: 'component/pagination.coffee'/}
     #{script_cdn name: 'outboundrecords/index.coffee'/}
 #{/set}
 #{flash_alert /}
