--- a/core/app/views/OutboundRecords/index.html
+++ b/core/app/views/OutboundRecords/index.html
@@ -48,6 +48,7 @@
         <span class="add-on"><i class="icon-search"></i></span>
         <input type="text" name="p.search" placeholder="出库记录 ID Or 出库对象编码 Or FBA" value="${p.search}" style="width:
               230px;">
+        <input type="hidden" name="p.page" value="${p.page}">
         <button class="btn btn-primary" data-loading>搜索</button>
       </div>
 
@@ -110,7 +111,7 @@
           <td>
             <a href="${r.stockObj.showStockObjLink()}" target="_blank">${r.stockObj.stockObjId}</a>
           </td>
-          <td>${r.stockObj.name()}</td>
+          <td style="max-width: 280px;">${r.stockObj.name()}</td>
             #{set attrs: r.stockObj.attributes()/}
           <td>${attrs.get('fba')}</td>
           <td>${attrs.get('whouseName')}</td>
