*  页面展示调整

--- a/core/app/views/OutboundRecords/index.html
+++ b/core/app/views/OutboundRecords/index.html
@@ -81,7 +81,7 @@
           <th>预计运输时间</th>
           <th>预计出货数量</th>
           <th>实际出货数量</th>
-          <th>接收对象</th>
+          <th>出库对象</th>
           <th>创建时间</th>
           <th>完成时间</th>
           <th>备注</th>
