--- a/core/app/views/StockRecords/index.html
+++ b/core/app/views/StockRecords/index.html
@@ -35,7 +35,7 @@
       </div>
 
       <div class="inline">
-        <a href="@{Excels.stockRecords(p)}" target="_blank" class="btn btn-info inline">盘点</a>
+        <a href="@{Excels.stockRecords(p)}" target="_blank" class="btn btn-info inline">开始盘点</a>
       </div>
     </div>
 
