*  datetimepicker 静态文件加入全局

--- a/core/app/views/_css_header.html
+++ b/core/app/views/_css_header.html
@@ -4,4 +4,5 @@
 #{stylesheet_cdn name:'jquery.loadmask.css'/}
 #{stylesheet_cdn name: 'selectize.default.css'/}
 #{stylesheet_cdn name:'dateinput.css'/}
+#{stylesheet_cdn name:'bootstrap-datetimepicker.min.css'/}
 #{stylesheet_cdn name:'main.css'/}
