*  增加完成时间编辑功能 *  更新时提示字段中文化

--- a/core/app/views/OutboundRecords/index.html
+++ b/core/app/views/OutboundRecords/index.html
@@ -143,8 +143,10 @@
                 </select>
               #{/elseif}
           </td>
-          <td>#{time_tooltip time: r.createDate, datetime: true/}</td>
-          <td>#{time_tooltip time: r.outboundDate, datetime: true/}</td>
+          <td>${r.createDate.datetime()}</td>
+          <td>
+            <input type="datetime" name="outboundDate" value="${r.outboundDate.datetime()}">
+          </td>
           <td>
             <input type="text" name="memo" value="${r.memo}" style="width: 150px;">
             <input type="hidden" name="state" value="${r.state.name()}">
