--- a/core/app/views/InboundRecords/index.html
+++ b/core/app/views/InboundRecords/index.html
@@ -103,8 +103,10 @@
                 #{/list}
             </select>
           </td>
-          <td>#{time_tooltip time: r.createDate, datetime: true/}</td>
-          <td>#{time_tooltip time: r.completeDate, datetime: true/}</td>
+          <td>${r.createDate.datetime()}</td>
+          <td>
+            <input type="datetime" name="completeDate" value="${r.completeDate.datetime()}">
+          </td>
           <td>
             <input type="text" name="memo" value="${r.memo}">
             <input type="hidden" name="state" value="${r.state.name()}">
