*  对于 select 特殊处理避免显示数据库 ID

--- a/core/app/views/InboundRecords/index.html
+++ b/core/app/views/InboundRecords/index.html
@@ -94,7 +94,7 @@
             <input type="text" name="badQty" value="${r.badQty}" style="width:45px;">
           </td>
           <td>
-            <select name="targetWhouse">
+            <select name="targetWhouse" data-value="${r.targetWhouse?.name}">
               <option value="">仓库</option>
                 #{list items:whouses, as:'whouse'}
                   <option ${whouse.id == r.targetWhouse?.id ? 'selected' : ''} value="${whouse.id}">
