--- a/core/app/views/OutboundRecords/index.html
+++ b/core/app/views/OutboundRecords/index.html
@@ -6,6 +6,20 @@
 #{/set}
 #{flash_alert /}
 
+#{info_row}
+<ul>
+  <li>
+    通过 <strong>[ID]</strong> 搜索出库记录时请使用匹配器: <strong>id:{入库记录ID}</strong>
+  </li>
+  <li>
+    <p class="text-error">
+      <strong>示例:</strong> id:123, 表示搜索 ID 为 123 的入库记录
+      &nbsp;&nbsp;<a href="javascript:void(0)" name="tryIdMatch"><i class="icon-hand-right"></i>试一下</a>
+    </p>
+  </li>
+</ul>
+#{/info_row}
+
 <div class="row-fluid">
   <form action="@{OutboundRecords.index()}" method="get" class="search_form" id="search_form">
     <div class="span12">
@@ -46,7 +60,7 @@
 
       <div class="input-prepend input-append inline">
         <span class="add-on"><i class="icon-search"></i></span>
-        <input type="text" name="p.search" placeholder="出库记录 ID Or 出库对象编码 Or FBA" value="${p.search}" style="width:
+        <input type="text" name="p.search" placeholder="出库对象编码 Or FBA" value="${p.search}" style="width:
               230px;">
         <input type="hidden" name="p.page" value="${p.page}">
         <button class="btn btn-primary" data-loading>搜索</button>
