*  页面提示调整

--- a/core/app/views/OutboundRecords/index.html
+++ b/core/app/views/OutboundRecords/index.html
@@ -9,11 +9,11 @@
 #{info_row}
 <ul>
   <li>
-    通过 <strong>[ID]</strong> 搜索出库记录时请使用匹配器: <strong>id:{入库记录ID}</strong>
+    通过 <strong>[ID]</strong> 搜索出库记录时请使用匹配器: <strong>id:{ID}</strong>
   </li>
   <li>
     <p class="text-error">
-      <strong>示例:</strong> id:123, 表示搜索 ID 为 123 的入库记录
+      <strong>示例:</strong> id:123, 表示搜索 ID 为 123 的出库记录
       &nbsp;&nbsp;<a href="javascript:void(0)" name="tryIdMatch"><i class="icon-hand-right"></i>试一下</a>
     </p>
   </li>
