*  自定义了 click 事件需要手动 confirm

--- a/core/app/views/OutboundRecords/index.html
+++ b/core/app/views/OutboundRecords/index.html
@@ -68,7 +68,7 @@
 
       <div class="inline">
         <a href="@{OutboundRecords.blank()}" target="_blank" class="btn btn-success inline">添加其他出库</a>
-        <a target="_blank" class="btn btn-info inline" name="confirm" data-confirm="确认出库?" data-loading>确认出库</a>
+        <a target="_blank" class="btn btn-info inline" name="confirm">确认出库</a>
       </div>
     </div>
   </form>
