--- a/core/app/views/InboundRecords/index.html
+++ b/core/app/views/InboundRecords/index.html
@@ -54,7 +54,7 @@
 
       <div class="inline">
         <a href="@{InboundRecords.blank()}" target="_blank" class="btn btn-success inline">添加其他入库</a>
-        <a target="_blank" class="btn btn-info inline" name="confirm" data-confirm="确认入库?">确认入库</a>
+        <a target="_blank" class="btn btn-info inline" name="confirm">确认入库</a>
       </div>
     </div>
   </form>
