*  增加传递仓库 ID 参数

--- a/core/app/views/WhouseItems/index.html
+++ b/core/app/views/WhouseItems/index.html
@@ -56,7 +56,10 @@
           <td style="max-width: 280px;">${item.stockObj.name()}</td>
           <td>${item.qty}</td>
           <td>
-            <a target="_blank" href="/StockRecords/index?p.search=${item.stockObj.stockObjId}">查看明细</a>
+            <a target="_blank"
+               href="/StockRecords/index?p.search=${item.stockObj?.stockObjId}&p.whouse.id=${item.whouse?.id}">
+              查看明细
+            </a>
           </td>
         </tr>
       #{/list}
