*  页面字段调整

--- a/core/app/views/InboundRecords/index.html
+++ b/core/app/views/InboundRecords/index.html
@@ -9,7 +9,7 @@
 #{info_row}
 <ul>
   <li>
-    通过 <strong>[ID]</strong> 搜索出库记录时请使用匹配器:  <strong>id:{ID}</strong>
+    通过 <strong>[ID]</strong> 搜索入库记录时请使用匹配器:  <strong>id:{ID}</strong>
   </li>
   <li>
     <p class="text-error">
