*  新增入库计划页面增加属性

--- a/core/app/views/OutboundRecords/blank.html
+++ b/core/app/views/OutboundRecords/blank.html
@@ -39,7 +39,7 @@
 
     <th>产品条码</th>
     <td>
-      <input type="text" name="record.productCode" value="${record.planBeginDate}">
+      <input type="text" name="record.productCode" value="${record.productCode}">
     </td>
   </tr>
   <tr>
