--- a/core/app/views/InboundRecords/blank.html
+++ b/core/app/views/InboundRecords/blank.html
@@ -10,42 +10,89 @@
 <h4 style="text-align:center" class="alert alert-info">添加其他入库</h4>
 <table class="table table-condensed table-bordered">
   <tr>
-    <th>物料编码</th>
+    <th>产品编码</th>
     <td>
-      <input type="text" name="record.stockObj.stockObjId" value="${record.stockObj?.stockObjId}">
+      <input type="text" name="record.stockObj.stockObjId" value="${record.stockObj?.stockObjId}" required>
       <input type="hidden" name="record.stockObj.stockObjType" value="${record.stockObj?.stockObjType}">
     </td>
 
-    <th>名称</th>
-    <td name="stock_name" style="width: 40%;">
+    <th>产品名称</th>
+    <td style="width: 40%;">
+      <input type="text" name="stock_name" value="${record.stockObj?.name()}" class="input-xxlarge" required>
     </td>
   </tr>
   <tr>
-    <th>仓库</th>
-    <td colspan="4">
+    <th>仓库名称</th>
+    <td>
       <select name="record.targetWhouse.id">
           #{list items:whouses, as:'whouse'}
             <option value="${whouse.id}">${whouse.name}</option>
           #{/list}
       </select>
     </td>
+
+    <th>预计入库数</th>
+    <td>
+      <input type="text" name="record.planQty" value="${record.planQty}" required>
+    </td>
   </tr>
   <tr>
-    <th>入库数量</th>
+    <th>物料采购ID</th>
+    <td colspan="3">
+      <input type="text" name="record.procureunitId" value="${record.procureunitId}" class="input-block-level">
+    </td>
+  </tr>
+
+  <tr>
+    <th>FBA</th>
     <td>
-      <input type="text" name="record.qty" value="${record.qty}">
+      <input type="text" name="record.fba" value="${record.fba}">
     </td>
 
-    <th>不良品数量</th>
+    <th>产品条码</th>
     <td>
-      <input type="text" name="record.badQty" value="${record.badQty}">
+      <input type="text" name="record.productCode" value="${record.productCode}">
+    </td>
+  </tr>
+
+  <tr>
+    <th>去往国家</th>
+    <td>
+      <select name="record.market" class="inline" name="record.market">
+        <option value="">请选择</option>
+          #{list items:models.market.M.amazonVals(), as:'m'}
+            <option ${m == record.market ? 'selected' : ''} value="${m.name()}">${m.marketAndWhouseMapping()}</option>
+          #{/list}
+      </select>
+    </td>
+
+    <th>运输方式</th>
+    <td>
+      <select name="record.shipType" class="inline">
+        <option value="">运输方式</option>
+          #{list items:models.procure.Shipment.T, as:'t'}
+            <option ${t == record.shipType ? 'selected' : ''} value="${t.name()}">${t.label()}</option>
+          #{/list}
+      </select>
+    </td>
+  </tr>
+
+  <tr>
+    <th>良品入库数</th>
+    <td>
+      <input type="text" name="record.qty" value="${record.qty}" required>
+    </td>
+
+    <th>不良品入库数</th>
+    <td>
+      <input type="text" name="record.badQty" value="${record.badQty}" required>
     </td>
   </tr>
 
   <tr>
     <th>备注</th>
     <td colspan="4">
-      <textarea name="record.memo" rows="4" class="span10">${record.memo}</textarea>
+      <textarea name="record.memo" rows="4" class="input-block-level">${record.memo}</textarea>
     </td>
   </tr>
   <tr>
