--- a/core/app/views/CheckTasks/_showTask.html
+++ b/core/app/views/CheckTasks/_showTask.html
@@ -22,7 +22,7 @@
 </tr>
 <tr>
   <th>质检员</th>
-  <td colspan="2">${check.showChecktor()}</td>
+  <td colspan="2">${check.matchChecktor()}</td>
   <th>状态</th>
   <td colspan="3">${check.checkstat.label()}</td>
   <th>订单数量</th>
