--- a/core/app/views/CheckTasks/checklist.html
+++ b/core/app/views/CheckTasks/checklist.html
@@ -156,7 +156,7 @@
         <td>${tl.units.attrs.qty}</td>
         <td>${tl.qcType?.label()}</td>
         <td>${tl.checkstat?.label()}</td>
-        <td>${tl.showChecktor()}</td>
+        <td>${tl.matchChecktor()}</td>
         <td>${tl.result?.label()}</td>
         <td>${tl.isship?.label()}</td>
         <td>${tl.startTime?.datetime()}</td>
