*  静态文件取消 CND

--- a/core/app/views/_css_header.html
+++ b/core/app/views/_css_header.html
@@ -1,8 +1,8 @@
-#{stylesheet_cdn name:'bootstrap.min.css'/}
-#{stylesheet_cdn name:'bootstrapSwitch.css'/}
-#{stylesheet_cdn name:'font-awesome.css'/}
-#{stylesheet_cdn name:'jquery.loadmask.css'/}
-#{stylesheet_cdn name: 'selectize.default.css'/}
-#{stylesheet_cdn name:'dateinput.css'/}
-#{stylesheet_cdn name:'bootstrap-datetimepicker.min.css'/}
-#{stylesheet_cdn name:'main.css'/}
+#{stylesheet name:'bootstrap.min.css'/}
+#{stylesheet name:'bootstrapSwitch.css'/}
+#{stylesheet name:'font-awesome.css'/}
+#{stylesheet name:'jquery.loadmask.css'/}
+#{stylesheet name: 'selectize.default.css'/}
+#{stylesheet name:'dateinput.css'/}
+#{stylesheet name:'bootstrap-datetimepicker.min.css'/}
+#{stylesheet name:'main.css'/}
